add max_distance and min_distance filter

--- a/jsk_pcl_ros/cfg/HeightmapMorphologicalFiltering.cfg
+++ b/jsk_pcl_ros/cfg/HeightmapMorphologicalFiltering.cfg
@@ -11,8 +11,10 @@ gen = ParameterGenerator ()
 
 gen.add("mask_size", int_t, 0, "", 2, 0, 10)
 gen.add("max_variance", double_t, 0, "", 0.1, 0, 1.0)
-algo_enum = gen.enum([gen.const("average_variance", str_t, "average_variance", "average_variance"),
-                      gen.const("average_distance", str_t, "average_distance", "average_distance")],
+algo_enum = gen.enum([gen.const("average_variance" , str_t, "average_variance", "average_variance"),
+                      gen.const("max_distance"     , str_t, "max_distance"    , "max_distance"),
+                      gen.const("min_distance"     , str_t, "min_distance"    , "min_distance"),
+                      gen.const("average_distance" , str_t, "average_distance", "average_distance")],
                       "smooth_method")
 gen.add("smooth_method", str_t, 0, "", "average_variance", edit_method=algo_enum)
 gen.add("use_bilateral", bool_t, 0, "", False)
