add dynamic reconfigure

--- a/jsk_pcl_ros/CMakeLists.txt
+++ b/jsk_pcl_ros/CMakeLists.txt
@@ -135,6 +135,7 @@ generate_dynamic_reconfigure_options(
   cfg/PrimitiveShapeClassifier.cfg
   cfg/Kinfu.cfg
   cfg/PointcloudScreenpoint.cfg
+  cfg/FrustumCulling.cfg
   )
 
 find_package(OpenCV REQUIRED core imgproc)
